--- a/package.json
+++ b/package.json
@@ -8,23 +8,23 @@
     "lint": "vue-cli-service lint --fix"
   },
   "dependencies": {
-    "animate.css": "^4.1.0",
-    "bootstrap": "^4.5.0",
-    "core-js": "^3.6.5",
-    "jquery": "^3.5.1",
-    "popper.js": "^1.16.1",
-    "vue": "^2.6.11"
+    "@popperjs/core": "^2.11.8",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^5.3.8",
+    "core-js": "^3.48.0",
+    "jquery": "^4.0.0",
+    "vue": "^3.5.28"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.4.5",
-    "@vue/cli-plugin-eslint": "^4.4.5",
-    "@vue/cli-service": "^4.4.5",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.3.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "@babel/eslint-parser": "^7.26.8",
+    "@vue/cli-plugin-babel": "^5.0.9",
+    "@vue/cli-plugin-eslint": "^5.0.9",
+    "@vue/cli-service": "^5.0.9",
+    "@vue/eslint-config-prettier": "^8.0.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-vue": "^9.0.0",
+    "vue-eslint-parser": "^10.2.0"
   },
   "postcss": {
     "plugins": {
